Fix Bar chart not showing data

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aliceblue;
+    background-color:rgb(252, 210, 217);
 }
 
 .container{
